Mô tả cácthêm details và lÃist Ãuser

--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -88,7 +88,7 @@
                     </a>
                 </li>
                 <li class="sidebar-items" data-page="user">
-                    <a class="sidebar-link" th:href="@{/admin/user}" >
+                    <a class="sidebar-link" th:href="@{/admin/users}" >
                         <i class="align-middle" data-feather="users"></i>
                         <span class="align-middle">User</span>
                     </a>
