--- a/src/main/resources/templates/admin/jobposts/jobpost.html
+++ b/src/main/resources/templates/admin/jobposts/jobpost.html
@@ -120,6 +120,12 @@
                                 <i class="align-middle" data-feather="trash-2"></i>
                             </a>
 
+                            <a th:href="@{'/admin/jobposts/details/' + ${jobPost.id}}"
+                               class="btn btn-outline-warning btn-sm rounded-circle"
+                               style="width: 40px; height: 40px; display: inline-flex; align-items: center; justify-content: center; font-size: 24px;">
+                                <i class="align-middle" data-feather="more-horizontal"></i>
+                            </a>
+
                         </td>
                     </tr>
                     </tbody>
