done thong tin tai khoan
done thong tin tai khoan

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -152,7 +152,7 @@
                 } else if (userInfo.roles.indexOf("ROLE_USER") !== -1) {
                     window.location.href = "http://localhost:8080";
                 } else if (userInfo.roles.indexOf("ROLE_COMPANY") !== -1) {
-                    window.location.href = "/job-posts/create";
+                    window.location.href = "/company-account";
                 } else {
                     window.location.href = "/auth/default/dashboard";
                 }
