sap xep jobpost va khoa tai khoan

--- a/src/main/resources/templates/admin/jobposts/jobpost.html
+++ b/src/main/resources/templates/admin/jobposts/jobpost.html
@@ -28,7 +28,7 @@
         }
         .status-active {
             background-color: #77ba86; /* Màu nền xanh nhạt */
-            color: #ffffff; /* Màu chữ xanh đậm */
+            color: #000000; /* Màu chữ xanh đậm */
             padding: 5px;
             border-radius: 5px;
             font-family: "Nunito", sans-serif;
@@ -36,7 +36,7 @@
 
         .status-pending {
             background-color: #f1e239; /* Màu nền vàng nhạt */
-            color: #fbfbfb; /* Màu chữ vàng đậm */
+            color: #000000; /* Màu chữ vàng đậm */
             padding: 5px;
             border-radius: 5px;
             font-family: "Nunito", sans-serif;
@@ -44,7 +44,7 @@
 
         .status-deleted {
             background-color: #ef3852; /* Màu nền đỏ nhạt */
-            color: #ffffff; /* Màu chữ đỏ đậm */
+            color: #000000; /* Màu chữ đỏ đậm */
             padding: 5px;
             border-radius: 5px;
             font-family: "Nunito", sans-serif;
